# Aligned

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/: _layout.tsx  dating-preferences.tsx  index.tsx  settings.tsx
app/(tabs)/: chats.tsx  index.tsx  likes.tsx  profile.tsx  start.tsx
app/auth/: _layout.tsx  interstitial.tsx  name.tsx  phone.tsx  verify.tsx
app/user/: [id].tsx
backend/: .gitignore  API.md  Cargo.toml
backend/src/: config.rs  db.rs  lib.rs  main.rs
backend/src/db/: images_queries.rs  interact_queries.rs  mod.rs  profile_queries.rs  prompt_queries.rs  seed.rs  user_queries.rs
backend/src/models/: inputs.rs  outputs.rs
backend/src/routes/: feed.rs  interactions.rs  matches.rs  mod.rs  profile.rs  prompts.rs  user.rs
backend/testing/: api-test.js
